# cmisc

./: .gitignore  justfile  meson.build  readme.md
.github/workflows/: build.yaml
hashtable/: hashtable.c  hashtable.h  meson.build  trace.h
src/: generic_select.c  generic_select.h  meson.build  xmacro.c  xmacro.h
unittest/: generic_select_test.c  hash_table_test.c  meson.build  xmacro_test.c
